--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -3633,7 +3633,8 @@ a.inactive {
 .operationlogcategory.admin.content .inactive *,
 .emailgroup.admin.content .inactive *,
 .program.admin.content .inactive *,
-.order-type.admin.content .inactive * {
+.order-type.admin.content .inactive *,
+.system.admin.content .inactive * {
     color: lightgray;
 }
 
