--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -484,7 +484,7 @@
             }
 
         };
-        var recaptchaMessage = '@Translation.GetForJS("Check the captcha")';
+        var recaptchaMessage = '@Translation.GetForJS("Please confirm that you are not a robot.")';
 
         $(function () {
             //init extended case page js instance
