--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -176,12 +176,9 @@ input[type="text"] {
 }
 
     .navbar.fixed {
-        position: fixed;
-        right: 0;
-        left: 0;
-        top: 0;
-        height: 45px;
-        z-index: 1058;
+        position: sticky;
+        max-width: 100vw;
+        min-height: 45px;
     }
 
 .navbar-admin /*ADMIN*/ {
@@ -275,6 +272,10 @@ input[type="text"] {
     margin: 0 !important;
 }
 
+.navbar-header.pull-right {
+    margin-left: auto !important;
+}
+
 .navbar .navbar-nav > li > a, .navbar .navbar-nav > li > a:hover, .navbar .navbar-nav > li > a:focus {
     font-size: 13px;
     text-shadow: none;
@@ -286,8 +287,8 @@ input[type="text"] {
 }
 
 .navbar-container {
-    padding-left: 20px;
-    padding-right: 20px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
     .navbar-container.container {
@@ -942,6 +943,24 @@ ul.typeahead.dropdown-menu {
 .secnavmarg {
     margin-top: -10px;
     margin-bottom: 20px;
+}
+
+
+#target {
+    display: flex;
+    flex-direction: column;
+}
+
+#target .secnavs.fixed {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: sticky;
+    max-width: 100vw;
+}
+
+#target .content {
+    margin: 20px 20px 0 20px;
 }
 /***************************************ERRORS**********************************************/
 label.error {
