--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -176,9 +176,12 @@ input[type="text"] {
 }
 
     .navbar.fixed {
-        position: sticky;
+        position: fixed;
+        width: 100%;
         max-width: 100vw;
         min-height: 45px;
+        top: 0;
+        z-index: 999;
     }
 
 .navbar-admin /*ADMIN*/ {
@@ -290,6 +293,10 @@ input[type="text"] {
     display: flex;
     flex-wrap: wrap;
 }
+
+    .navbar-container a {
+        padding-left: 20px; /* Detta bara för att inte loggan ska gå enda ut, bara visuell grej som jag noterade */
+    }
 
     .navbar-container.container {
         padding-left: 0;
@@ -603,6 +610,25 @@ input[type="text"] {
         display: none;
     }
 }
+
+@media (max-width:716px) {
+    #target .secnavs.fixed {
+        top: 88px;
+    }
+}
+
+@media (max-width:1596px) {
+    #target .content {
+        margin: 140px 20px 0px 20px !important;
+    }
+}
+
+@media (max-width:1277px) {
+    #target .content {
+        margin: 170px 20px 0px 20px !important;
+    }
+}
+
 /******************************DROP DOWN NAV************************************************/
 
 .dropdown-menu {
@@ -955,13 +981,13 @@ ul.typeahead.dropdown-menu {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    position: sticky;
+    position: fixed;
     max-width: 100vw;
 }
 
-#target .content {
-    margin: 20px 20px 0 20px;
-}
+    #target .content {
+        margin: 110px 20px 0px 20px;
+    }
 /***************************************ERRORS**********************************************/
 label.error {
     color: #ff0000;
