--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -176,12 +176,9 @@ input[type="text"] {
 }
 
     .navbar.fixed {
-        position: fixed;
-        width: 100%;
+        position: sticky;
         max-width: 100vw;
         min-height: 45px;
-        top: 0;
-        z-index: 999;
     }
 
 .navbar-admin /*ADMIN*/ {
@@ -293,10 +290,6 @@ input[type="text"] {
     display: flex;
     flex-wrap: wrap;
 }
-
-    .navbar-container a {
-        padding-left: 20px; /* Detta bara för att inte loggan ska gå enda ut, bara visuell grej som jag noterade */
-    }
 
     .navbar-container.container {
         padding-left: 0;
@@ -610,25 +603,6 @@ input[type="text"] {
         display: none;
     }
 }
-
-@media (max-width:716px) {
-    #target .secnavs.fixed {
-        top: 88px;
-    }
-}
-
-@media (max-width:1596px) {
-    #target .content {
-        margin: 140px 20px 0px 20px !important;
-    }
-}
-
-@media (max-width:1277px) {
-    #target .content {
-        margin: 170px 20px 0px 20px !important;
-    }
-}
-
 /******************************DROP DOWN NAV************************************************/
 
 .dropdown-menu {
@@ -981,13 +955,13 @@ ul.typeahead.dropdown-menu {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    position: fixed;
+    position: sticky;
     max-width: 100vw;
 }
 
-    #target .content {
-        margin: 110px 20px 0px 20px;
-    }
+#target .content {
+    margin: 20px 20px 0 20px;
+}
 /***************************************ERRORS**********************************************/
 label.error {
     color: #ff0000;
