--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -176,9 +176,12 @@ input[type="text"] {
 }
 
     .navbar.fixed {
-        position: sticky;
-        max-width: 100vw;
-        min-height: 45px;
+        position: fixed;
+        right: 0;
+        left: 0;
+        top: 0;
+        height: 45px;
+        z-index: 1058;
     }
 
 .navbar-admin /*ADMIN*/ {
@@ -272,10 +275,6 @@ input[type="text"] {
     margin: 0 !important;
 }
 
-.navbar-header.pull-right {
-    margin-left: auto !important;
-}
-
 .navbar .navbar-nav > li > a, .navbar .navbar-nav > li > a:hover, .navbar .navbar-nav > li > a:focus {
     font-size: 13px;
     text-shadow: none;
@@ -287,8 +286,8 @@ input[type="text"] {
 }
 
 .navbar-container {
-    display: flex;
-    flex-wrap: wrap;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
     .navbar-container.container {
@@ -943,24 +942,6 @@ ul.typeahead.dropdown-menu {
 .secnavmarg {
     margin-top: -10px;
     margin-bottom: 20px;
-}
-
-
-#target {
-    display: flex;
-    flex-direction: column;
-}
-
-#target .secnavs.fixed {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    position: sticky;
-    max-width: 100vw;
-}
-
-#target .content {
-    margin: 20px 20px 0 20px;
 }
 /***************************************ERRORS**********************************************/
 label.error {
