#94120 Case template - Section Show missing

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -136,7 +136,7 @@
                             </table>
                         </div>
                     </div>
-                    <div style="@Model.displayUserInfoHtml()" class="notifier-block hideshow">
+                    <div class="notifier-block hideshow">
                         <h4>@Translation.Get("Visa", Enums.TranslationSource.TextTranslation)</h4>
                         <div class="row">
                             <div class="span12">
