#98579 added extra ckeck for recaptcha sitekey

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -30,6 +30,11 @@
 
     var recaptchaSiteKey = ConfigurationManager.AppSettings[AppSettingsKey.ReCaptchaSiteKey] != null ?
                            ConfigurationManager.AppSettings[AppSettingsKey.ReCaptchaSiteKey].ToString() : "";
+    if (recaptchaSiteKey == "#{reCaptchaSiteKey}")
+    {
+        recaptchaSiteKey = "";
+    }
+
 }
 
 <script type="text/javascript">
