#96698 Save inactive value and select inactive values

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
@@ -86,6 +86,7 @@
             SourceId: "CustomerRegistrationSourceId",
             CaseTypeId: "case__CaseType_Id",
             ProductAreaId: "case__ProductArea_Id",
+            SystemId: "case__System_Id",
             CategoryId: "case__Category_Id",
             SupplierId: "case__Supplier_Id",
             WorkingGroupId: "case__WorkingGroup_Id",
