--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1092,17 +1092,9 @@
                                                     <option value="">&nbsp;</option>
                                                     @if (Model.systems != null)
                                                     {
-                                                        foreach (var e in Model.systems)
-                                                        {
-                                                            if (e.Id == Model.case_.System_Id && e.Status == 0)
-                                                            {
-                                                <option disabled value="@e.Id" @e.Id.IdIsSelected(Model.case_.System_Id.ToString())>@e.SystemName</option>
-                                                            }
-                                                            else
-                                                            {
-                                                                <option value="@e.Id" @e.Id.IdIsSelected(Model.case_.System_Id.ToString())>@e.SystemName</option>
-                                                            }
-
+                                                        foreach (var e in Model.systems.Where(e => e.Status == 1 || Model.case_.System_Id == e.Id))
+                                                        {                                                           
+                                                           <option value="@e.Id" class="@(e.Status != 1 ? "inactive" : string.Empty)" @e.Id.IdIsSelected(Model.case_.System_Id.ToString())>@e.SystemName</option>                                                           
                                                         }
                                                     }
                                                 </select>
