#106340  "I'm not a robot" - Server side check

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -405,12 +405,7 @@
                 </div>
                 @if (Model.CaseId == 0 && (recaptchaSiteKey != "" || recaptchaSiteKey != null))
                 {
-                    <div class="col-md-3 dh-col">
-                        <div class="container form-horizontal">
-                            <div id="cap1"></div>
-                            <div class="validation-message" style="margin:10px"></div>
-                        </div>
-                    </div>
+                    <div id="cap1" class="g-recaptcha" data-sitekey=@recaptchaSiteKey></div>                    
                 }
             </div>
         </div>
