--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -799,14 +799,8 @@
 
                     if (Model.NewCase.Id == 0 && (recaptchaSiteKey != "" || recaptchaSiteKey != null))
                     {
-                        <div class="row">
-                            <div class="col-md-3 dh-col">
-                                <div class="container form-horizontal">
-                                    <div id="cap1"></div>
-                                    <div class="validation-message" style="margin:10px"></div>
-                                </div>
-                            </div>
-                        </div>}
+                        <div id="cap1" class="g-recaptcha" data-sitekey=@recaptchaSiteKey></div>                      
+                    }
 
                 }
             </div>
