#89560 Templates not all fields are filled from SelfService

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -129,6 +129,9 @@
                     @Html.HiddenFor(model => model.NewCase.Id)
                     @Html.HiddenFor(model => model.NewCase.CaseGUID)
                     @Html.HiddenFor(model => model.NewCase.Customer_Id)
+                    @Html.HiddenFor(model => model.NewCase.Region_Id)
+                    @Html.HiddenFor(model => model.NewCase.Department_Id)
+                    @Html.HiddenFor(model => model.NewCase.OU_Id)
                     @Html.HiddenFor(model => model.NewCase.User_Id)
                     @Html.HiddenFor(model => model.NewCase.IpAddress)
                     @Html.HiddenFor(model => model.NewCase.Deleted)
@@ -164,6 +167,10 @@
                     @Html.HiddenFor(model => model.NewCase.FinishingDate)
                     @Html.HiddenFor(model => model.NewCase.FinishingDescription)
                     @Html.HiddenFor(model => model.NewCase.PlanDate)
+                    @Html.HiddenFor(model => model.NewCase.Place)
+                    @Html.HiddenFor(model => model.NewCase.Available)
+                    @Html.HiddenFor(model => model.NewCase.UserCode)
+                    @Html.HiddenFor(model => model.NewCase.ReferenceNumber)
                     @Html.HiddenFor(model => model.NewCase.Performer_User_Id)
                     @Html.HiddenFor(model => model.NewCase.Change_Id)
                     @Html.HiddenFor(model => model.NewCase.FinishingDescription)
